feat: Rename project to Trufarte
Update package name, title, metadata, and logo alt text to reflect the new project name "Trufarte".

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "juh-trufados---link-na-bio",
+  "name": "trufarte---link-na-bio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
