refactor: Update project name to Mayatrufados
The project name and associated metadata have been updated from "Trufarte" to "Mayatrufados" to reflect the brand accurately. This includes changes in package.json, index.html, and metadata.json. Additionally, theme switching functionality has been disabled for consistency, and the navigation in Header and back button on EncomendasPage have been adjusted.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trufarte---link-na-bio",
+  "name": "mayatrufados---link-na-bio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
